	  Leo aloe3132 (2015-05-29).
	* apps/platform/stm32f4discovery: Move up_cxxinitialize from
	  nuttx/configs/stm32f4discovery/src to apps/platform/stm32f4discovery
	  where it belongs (2015-05-29).
	* apps/examples/elf/tests/helloxx: Add hello++5 to ELF example.  From
	  Leo Aloe3132 (2015-06-01).
	* apps/netutils/thttpd/ and apps/examples/thttpd/: Add support for using
	  binfs/ instead of NXFLAT.  NXFLAT is probably the better solution but
	  recently compiler changes make it unusable.  binfs or ELF are fallback
	  binary formats.  This commit adds an option to use binfs (2015-06-02).
	* apps/examples/unionfs: Add a test of the union file system to
	  apps/examples (2015-06-05).
	* apps/examples/thttpd now uses the Union File System if BINFS is
	  selected for CGI binaries (2015-06-06).
	* apps/nshlib/: The NSH mount command now recognizes the Union file
	  system type when listing mounted file systems (2015-06-07).

7.11 2015-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/netutils/thttpd:  Fix compilation problems when
	  CONFIG_THTTPD_GENERATE_INDICES is defined (2015-06-12).
	* apps/include: Clean up and review of header files for conformance to
	  standards (2015-06-12).
	* apps/examples/ostest/:  Extend the OS test to include a test of
	  pthread_mutex_trylock() for recursive mutexes. From Juha Niskanen
	  (2015-06-16).
	* apps/netutils/thttpd: Missing gci-src as a dependency path when
	  building with BINFS enabled (2015-06-18).
	* The apps/ directory has been removed from the NuttX GIT repository
	  and now stands alone in its own repository (2015-06-27).
	* apps/examples/poll: Fix a few bit-rot compilation errors (2015-07-01).
	* apps/nshlib: NSH will now support an (optional) shutdown command if
	  the board provides the option CONFIG_BOARD_POWEROFF (2015-07-04).
	* apps/system/poweroff:  Remove the system poweroff command.  This is
	  replaced with the NSH shutdown commandi (2015-07-02).
