@@ -988,7 +988,8 @@ void nsh_usbtrace(void);
 #  endif
 #endif /* CONFIG_NET */
 
-#if defined(CONFIG_BOARDCTL_POWEROFF) && !defined(CONFIG_NSH_DISABLE_SHUTDOWN)
+#if (defined(CONFIG_BOARDCTL_POWEROFF) || defined(CONFIG_BOARDCTL_RESET)) && \
+    !defined(CONFIG_NSH_DISABLE_SHUTDOWN)
    int cmd_shutdown(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv);
 #endif
 
