@@ -1328,7 +1328,9 @@
 	  and now stands alone in its own repository (2015-06-27).
 	* apps/examples/poll: Fix a few bit-rot compilation errors (2015-07-01).
 	* apps/nshlib: NSH will now support an (optional) shutdown command if
-	  the board provides the option CONFIG_BOARD_POWEROFF (2015-07-04).
+	  the board provides the option CONFIG_BOARDCTL_POWEROFF.  The command can
+	  also be used to reset the system if CONFIG_BOARDCTL_RESET=y.
+	  (2015-07-04).
 	* apps/system/poweroff:  Remove the system poweroff command.  This is
 	  replaced with the NSH shutdown commandi (2015-07-02).
 
